testsuite/tests/polykinds/T15795a.stderr

T15795a.hs:9:3: error:
    • Skolem escape leads to quantification failure.
      When quantifying this type:
        forall u1 (a :: u1). F @u1 @cat10 a
      these skolems would escape:
        u
      if we quantified this variable:
        (cat10 :: u)
      (Indeed, I struggle even printing this correctly,
       due to its ill-scoped nature.)
    • In the definition of data constructor ‘Prod’
      In the data declaration for ‘F’
